Fixed bug with .about-me-btn on mobile devices

--- a/sass/_partials/_header.sass
+++ b/sass/_partials/_header.sass
@@ -270,3 +270,7 @@ header
             font-size: 3.75rem
         .small-text
             font-size: 1.25rem
+
+@media (hover: none)
+    header .about-me-btn
+        bottom: 50px
